--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "firebase": "^9.2.0",
     "firebaseui": "^6.0.0",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0"
+    "vue-router": "^4.0.0-0",
+    "vue3-carousel": "^0.1.30"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
